[project]
name = "py-ld"
version = "0.1.0"
description = ""
authors = [
    {name = "umgbhalla", email = "umg.bhalla88@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
